infrastructure/k8s/service/client.yml
apiVersion: v1
kind: Service
metadata:
  name: client-app-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: client-app
  ports:
    - name: client-app
      protocol: TCP
      port: 3000
      targetPort: 3000
