infrastructure/k8s/service/comment.yml
apiVersion: v1
kind: Service
metadata:
  name: comment-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
