infrastructure/k8s/service/event-bus.yml
apiVersion: v1
kind: Service
metadata:
  name: event-bus-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: event-bus
  ports:
    - name: posts
      protocol: TCP
      port: 4015
      targetPort: 4015
