infrastructure/k8s/service/post.yml
# apiVersion: v1
# kind: Service
# metadata:
#   name: post-service
# spec:
#   type: NodePort
#   selector:
#     app: posts
#   ports:
#     - name: posts
#       protocol: TCP
#       port: 4000
#       targetPort: 4000
# ---
apiVersion: v1
kind: Service
metadata:
  name: post-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
