infrastructure/k8s/service/query.yml
apiVersion: v1
kind: Service
metadata:
  name: query-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: queries
  ports:
    - name: queries
      protocol: TCP
      port: 4002
      targetPort: 4002
