infrastructure/k8s/service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    name: ingress-service
spec:
  rules:
    - host: posts.com
      http:
        paths:
          - pathType: Prefix
            path: "/posts/create"
            backend:
              service:
                name: post-cluster-ip-service
                port:
                  number: 4000

          - pathType: Prefix
            path: "/posts"
            backend:
              service:
                name: query-cluster-ip-service
                port:
                  number: 4002

          - pathType: Prefix
            path: "/posts/?(.*)/comments"
            backend:
              service:
                name: comment-cluster-ip-service
                port:
                  number: 4001

          - pathType: Prefix
            path: "/?(.*)"
            backend:
              service:
                name: client-app-cluster-ip-service
                port:
                  number: 3000
